# Fast-Data-Parser

./: CMakeLists.txt  README.md  СMakeLists.txt
app/scripts/: generate_data.py  process_data.py
app/src/: CsvParser.h  MemoryMappedFile.h  ThreadPool.h  main.cpp
